Ensure widget is updated when disabling options
Certain choices have been made regarding fallback index choices
depending on the currently chosen index upon editing the disabled
options.
See `example.ipynb` for an explanation.

--- a/examples/examples.ipynb
+++ b/examples/examples.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,24 +11,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a63cac5b89fe48bf871adc87c46462da",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "DropdownExtended(disabled_options=['Option 1', 'Option 3', 'Option 4'], index=1, layout=Layout(width='auto'), …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "DropdownExtended(\n",
     "    options=[\"Option 1\", \"Option 2\", \"Option 3\", \"Option 4\"],\n",
@@ -40,7 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the example above, **DropdownExtended** is initialized with 4 option, 2 of which are disabled.\n",
+    "In the example above, **DropdownExtended** is initialized with 4 options, 2 of which are disabled.\n",
     "Note that since the first option is disabled, the widget initializes with the first non-disabled option - in this case _Option 2_.\n",
     "\n",
     "If all options are initialized as disabled, the widget will mimic the **Dropdown** widget, if no options had been supplied, i.e., it will set `index`, `label`, and `value` to `None`, leaving the \"chosen\" option blank:"
@@ -48,29 +33,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fdfdfd45913f44bb9eb3dd52ff6368be",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "DropdownExtended(disabled_options=['Option 1', 'Option 2', 'Option 3', 'Option 4'], options=('Option 1', 'Opti…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "DropdownExtended(\n",
     "    options=[\"Option 1\", \"Option 2\", \"Option 3\", \"Option 4\"],\n",
     "    disabled_options=[\"Option 1\", \"Option 2\", \"Option 3\", \"Option 4\"],\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dropdown = DropdownExtended(\n",
+    "    options=[\"Option 1\", \"Option 2\", \"Option 3\", \"Option 4\"]\n",
+    ")\n",
+    "dropdown"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dropdown.disabled_options = [\"Option 2\", \"Option 3\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the dropdown above, it is first rendered without any disabled options (try running only the first cell to see).\n",
+    "\n",
+    "When the second cell is run the options `Option 2` and `Option 3` are disabled.\n",
+    "Depending on which value you have currently chosen, the dropbox will do different things:\n",
+    "\n",
+    "- If you prior to running the second cell have chosen a value that is still enabled afterwards, it will stay the chosen value (try this out by choosing `Option 4`).\n",
+    "- If you prior to running the second cell have chosen a value that is disabled afterwards, the widget will default to the first value (from the beginning/top) that is enabled.\n",
+    "  If no values are enabled, you will get the same result as the second **DropdownExtended** widget above (no value will be chosen, leaving it blank and the `value` will be `None`).\n",
+    "  You can try this out by first choosing `Option 2` or `Option 3` and then running the second cell.\n",
+    "  This will result in `Option 1` being chosen.\n",
+    "  And if you extend the list of disabled options in the second cell to include also `Option 1` and `Option 4`, you will see that this will leave the widget blank (you can run the cell below to try this out)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dropdown.disabled_options = [\"Option 1\", \"Option 2\", \"Option 3\", \"Option 4\"]"
    ]
   }
  ],
