Ensure grouping is properly used when supplied

--- a/examples/examples.ipynb
+++ b/examples/examples.ipynb
@@ -91,6 +91,46 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Grouping\n",
+    "\n",
+    "The options can be grouped as well using the `grouping` parameter.\n",
+    "Note, `grouping` is an *alternative* to using `options` when initializing, using both will result in a `ValueError`.\n",
+    "\n",
+    "The value for `grouping` should be an iterable of (header, `options`)-pairs, where `options` signifies a value similar to what you would normally put for the `options` parameter.\n",
+    "Example:\n",
+    "\n",
+    "```python\n",
+    "grouping = [\n",
+    "    (\n",
+    "        \"Group 1\",\n",
+    "        [(\"Option 1-1\", \"Value 1-1\"), (\"Option 1-2\", \"Value 1-2\")]\n",
+    "    ),\n",
+    "    (\n",
+    "        \"Group 2\",\n",
+    "        [(\"Option 2-1\", \"Value 2-1\"), (\"Option 2-2\", \"Value 2-2\"), (\"Option 2-3\", \"Value 2-3\")]\n",
+    "    )\n",
+    "]\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DropdownExtended(\n",
+    "    grouping=[\n",
+    "        (\"Group 1\", [(\"Option 1-1\", \"Value 1-1\"), (\"Option 1-2\", \"Value 1-2\")]),\n",
+    "        (\"Group 2\", [(\"Option 2-1\", \"Value 2-1\"), (\"Option 2-2\", \"Value 2-2\"), (\"Option 2-3\", \"Value 2-3\")]),\n",
+    "    ]\n",
+    ")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
