Further update examples notebook
Showing that disabled options and grouping works together.

--- a/examples/examples.ipynb
+++ b/examples/examples.ipynb
@@ -10,6 +10,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# `DropdownExtended` widget\n",
+    "\n",
+    "## Disabled options"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -94,7 +103,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Grouping\n",
+    "## Grouping\n",
     "\n",
     "The options can be grouped as well using the `grouping` parameter.\n",
     "Note, `grouping` is an *alternative* to using `options` when initializing, using both will result in a `ValueError`.\n",
@@ -131,11 +140,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Disabled options\n",
+    "\n",
+    "Grouping can be combined with disabled options as well.\n",
+    "In the following a new dropdown has some disabled options:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "dropdown = DropdownExtended(\n",
+    "    grouping=[\n",
+    "        (\"Group 1\", [(\"Option 1-1\", \"Value 1-1\"), (\"Option 1-2\", \"Value 1-2\")]),\n",
+    "        (\"Group 2\", [(\"Option 2-1\", \"Value 2-1\"), (\"Option 2-2\", \"Value 2-2\"), (\"Option 2-3\", \"Value 2-3\")]),\n",
+    "    ],\n",
+    "    disabled_options=[\"Option 2-3\", \"Option 1-1\"],\n",
+    ")\n",
+    "dropdown"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The disabled options can be changed here as well."
+   ]
   }
  ],
  "metadata": {
