--- a/examples/examples.ipynb
+++ b/examples/examples.ipynb
@@ -171,6 +171,62 @@
    "source": [
     "The disabled options can be changed here as well."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dropdown.disabled_options = [\"Option 1-1\", \"Option 1-2\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Mixed grouped and un-grouped options\n",
+    "\n",
+    "One can create un-grouped options alongside grouped options by setting the header to an empty string `\"\"`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dropdown = DropdownExtended(\n",
+    "    grouping=[\n",
+    "        (\"\", [\"Choose an option ...\"]),\n",
+    "        (\"Group 1\", [(\"Option 1-1\", \"Value 1-1\"), (\"Option 1-2\", \"Value 1-2\")]),\n",
+    "        (\"\", [(\"This option is not grouped\", \"Non-grouped value 1\"), (\"This second option is not grouped\", \"Non-grouped value 2\")]),\n",
+    "        (\"Group 2\", [(\"Option 2-1\", \"Value 2-1\"), (\"Option 2-2\", \"Value 2-2\"), (\"Option 2-3\", \"Value 2-3\")]),\n",
+    "    ]\n",
+    ")\n",
+    "dropdown"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The grouping can also be updated after creating the object.\n",
+    "Let's remove the un-grouped options between the groups and only have a single option in `\"Group 1\"`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dropdown.grouping = [\n",
+    "    (\"\", [\"Choose an option ...\"]),\n",
+    "    (\"Group 1\", [(\"Option 1-1\", \"Value 1-1\")]),\n",
+    "    (\"Group 2\", [(\"Option 2-1\", \"Value 2-1\"), (\"Option 2-2\", \"Value 2-2\"), (\"Option 2-3\", \"Value 2-3\")]),\n",
+    "]"
+   ]
   }
  ],
  "metadata": {
