--- a/examples/examples.ipynb
+++ b/examples/examples.ipynb
@@ -10,6 +10,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# `DropdownExtended` widget\n",
+    "\n",
+    "## Disabled options"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -88,6 +97,135 @@
    "outputs": [],
    "source": [
     "dropdown.disabled_options = [\"Option 1\", \"Option 2\", \"Option 3\", \"Option 4\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Grouping\n",
+    "\n",
+    "The options can be grouped as well using the `grouping` parameter.\n",
+    "Note, `grouping` is an *alternative* to using `options` when initializing, using both will result in a `ValueError`.\n",
+    "\n",
+    "The value for `grouping` should be an iterable of (header, `options`)-pairs, where `options` signifies a value similar to what you would normally put for the `options` parameter.\n",
+    "Example:\n",
+    "\n",
+    "```python\n",
+    "grouping = [\n",
+    "    (\n",
+    "        \"Group 1\",\n",
+    "        [(\"Option 1-1\", \"Value 1-1\"), (\"Option 1-2\", \"Value 1-2\")]\n",
+    "    ),\n",
+    "    (\n",
+    "        \"Group 2\",\n",
+    "        [(\"Option 2-1\", \"Value 2-1\"), (\"Option 2-2\", \"Value 2-2\"), (\"Option 2-3\", \"Value 2-3\")]\n",
+    "    )\n",
+    "]\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DropdownExtended(\n",
+    "    grouping=[\n",
+    "        (\"Group 1\", [(\"Option 1-1\", \"Value 1-1\"), (\"Option 1-2\", \"Value 1-2\")]),\n",
+    "        (\"Group 2\", [(\"Option 2-1\", \"Value 2-1\"), (\"Option 2-2\", \"Value 2-2\"), (\"Option 2-3\", \"Value 2-3\")]),\n",
+    "    ]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Disabled options\n",
+    "\n",
+    "Grouping can be combined with disabled options as well.\n",
+    "In the following a new dropdown has some disabled options:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dropdown = DropdownExtended(\n",
+    "    grouping=[\n",
+    "        (\"Group 1\", [(\"Option 1-1\", \"Value 1-1\"), (\"Option 1-2\", \"Value 1-2\")]),\n",
+    "        (\"Group 2\", [(\"Option 2-1\", \"Value 2-1\"), (\"Option 2-2\", \"Value 2-2\"), (\"Option 2-3\", \"Value 2-3\")]),\n",
+    "    ],\n",
+    "    disabled_options=[\"Option 2-3\", \"Option 1-1\"],\n",
+    ")\n",
+    "dropdown"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The disabled options can be changed here as well."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dropdown.disabled_options = [\"Option 1-1\", \"Option 1-2\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Mixed grouped and un-grouped options\n",
+    "\n",
+    "One can create un-grouped options alongside grouped options by setting the header to an empty string `\"\"`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dropdown = DropdownExtended(\n",
+    "    grouping=[\n",
+    "        (\"\", [\"Choose an option ...\"]),\n",
+    "        (\"Group 1\", [(\"Option 1-1\", \"Value 1-1\"), (\"Option 1-2\", \"Value 1-2\")]),\n",
+    "        (\"\", [(\"This option is not grouped\", \"Non-grouped value 1\"), (\"This second option is not grouped\", \"Non-grouped value 2\")]),\n",
+    "        (\"Group 2\", [(\"Option 2-1\", \"Value 2-1\"), (\"Option 2-2\", \"Value 2-2\"), (\"Option 2-3\", \"Value 2-3\")]),\n",
+    "    ]\n",
+    ")\n",
+    "dropdown"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The grouping can also be updated after creating the object.\n",
+    "Let's remove the un-grouped options between the groups and only have a single option in `\"Group 1\"`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dropdown.grouping = [\n",
+    "    (\"\", [\"Choose an option ...\"]),\n",
+    "    (\"Group 1\", [(\"Option 1-1\", \"Value 1-1\")]),\n",
+    "    (\"Group 2\", [(\"Option 2-1\", \"Value 2-1\"), (\"Option 2-2\", \"Value 2-2\"), (\"Option 2-3\", \"Value 2-3\")]),\n",
+    "]"
    ]
   }
  ],
