--- a/examples/examples.ipynb
+++ b/examples/examples.ipynb
@@ -70,6 +70,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "dropdown.label"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "dropdown.disabled_options = [\"Option 2\", \"Option 3\"]"
    ]
   },
@@ -131,12 +140,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DropdownExtended(\n",
+    "dropdown = DropdownExtended(\n",
     "    grouping=[\n",
     "        (\"Group 1\", [(\"Option 1-1\", \"Value 1-1\"), (\"Option 1-2\", \"Value 1-2\")]),\n",
     "        (\"Group 2\", [(\"Option 2-1\", \"Value 2-1\"), (\"Option 2-2\", \"Value 2-2\"), (\"Option 2-3\", \"Value 2-3\")]),\n",
     "    ]\n",
-    ")"
+    ")\n",
+    "dropdown"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dropdown.value"
    ]
   },
   {
@@ -227,11 +246,25 @@
     "    (\"Group 2\", [(\"Option 2-1\", \"Value 2-1\"), (\"Option 2-2\", \"Value 2-2\"), (\"Option 2-3\", \"Value 2-3\")]),\n",
     "]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -245,7 +278,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
