Reset example notebook - removing test cells

--- a/examples/examples.ipynb
+++ b/examples/examples.ipynb
@@ -70,15 +70,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dropdown.label"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "dropdown.disabled_options = [\"Option 2\", \"Option 3\"]"
    ]
   },
@@ -140,22 +131,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dropdown = DropdownExtended(\n",
+    "DropdownExtended(\n",
     "    grouping=[\n",
     "        (\"Group 1\", [(\"Option 1-1\", \"Value 1-1\"), (\"Option 1-2\", \"Value 1-2\")]),\n",
     "        (\"Group 2\", [(\"Option 2-1\", \"Value 2-1\"), (\"Option 2-2\", \"Value 2-2\"), (\"Option 2-3\", \"Value 2-3\")]),\n",
     "    ]\n",
-    ")\n",
-    "dropdown"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dropdown.value"
+    ")"
    ]
   },
   {
@@ -246,20 +227,6 @@
     "    (\"Group 2\", [(\"Option 2-1\", \"Value 2-1\"), (\"Option 2-2\", \"Value 2-2\"), (\"Option 2-3\", \"Value 2-3\")]),\n",
     "]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
